@@ -17,6 +17,7 @@
     <include package=".browser" />
     <include package=".content" />
     <include package=".viewlets" />
+    <include package=".upgrades" />
 
     <configure zcml:condition="installed ftw.pdfgenerator">
         <include package="ftw.pdfgenerator" />
