@@ -17,7 +17,6 @@
   <property name="allow_discussion">False</property>
   <property name="default_view">meeting_view</property>
   <property name="view_methods">
-    <element value="base_view" />
     <element value="meeting_view" />
   </property>
   <alias from="(Default)" to="(dynamic view)" />
