@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="Meeting"
+        meta_type="Factory-based Type Information with dynamic views"
+        i18n:domain="ftw.meeting"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+    <property name="view_methods">
+        <element value="meeting_view" />
+    </property>
+
+</object>
