@@ -5,6 +5,9 @@ Changelog
 1.3.8 (unreleased)
 ------------------
 
+- Remove base_view from allowed Meeting views.
+  [jone]
+
 - Nothing changed yet.
 
 
